Bug 164417 - Autofiltered XLSX with dates cannot be opened in MSO
Summary: Autofiltered XLSX with dates cannot be opened in MSO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: high normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords: bibisected, bisected, filter:xlsx, regression
Depends on:
Blocks: XLSX-Corrupted XLSX-Autofilter
  Show dependency treegraph
 
Reported: 2024-12-21 18:22 UTC by Timur
Modified: 2025-01-06 13:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Autofilter in LO (6.81 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-12-21 18:22 UTC, Timur
Details
Autofilter in LO 7.0 (6.07 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-12-21 18:23 UTC, Timur
Details
Autofilter in MSO (7.79 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-12-21 18:23 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2024-12-21 18:22:12 UTC
Created attachment 198216 [details]
Autofilter in LO

Autofiltered XLSX with mix of dates and text cannot be opened in MSO.
Attached is LO created sample. Reproduced in 24.2 and 25.2+.

When same file is opened in LO 7.0, checkboxes are not selected. If selected, saved XLSX opens in MSO. Seems regression, maybe from autofilter changes in 7.2.
Comment 1 Timur 2024-12-21 18:23:23 UTC
Created attachment 198217 [details]
Autofilter in LO 7.0
Comment 2 Timur 2024-12-21 18:23:47 UTC
Created attachment 198218 [details]
Autofilter in MSO
Comment 3 m_a_riosv 2024-12-22 11:58:32 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 141f3fd15633803afa720837405a0bacbc2726cb
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 m_a_riosv 2024-12-22 11:59:08 UTC
Excel version
Microsoft® Excel® para Microsoft 365 MSO (versión 2411 compilación 16.0.18227.20082) de 64 bits
Comment 5 Timur 2024-12-23 11:05:33 UTC
Bisected to:

commit eea523b686b27b4807ab21b62805ce9fbddf74ef	[log]
author	Balazs Varga <balazs.varga991@gmail.com>	Wed Jan 20 12:11:14 2021 
committer	László Németh <nemeth@numbertext.org>	Tue Jan 26 13:44:38 2021

tdf#139809 sc ooxml export autofiltered date columns

Export XML_dateGroupItem, XML_year, XML_month, XML_day,
XML_dateTimeGrouping based on the OOXML standard.

Follow up commit of: d101a6f8579df8241dcd8100908868cd7d7c3f8a
(tdf#116818 sc OOXML: import autofiltered date columns)

Balazs please see. 
Wnen dealing with this, best is to test all variants, like creating in LO, MSO, opening in other and resaving, and again opening in the original one.
Comment 6 Commit Notification 2024-12-27 16:08:31 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8b492a1f3057d2b6c3daed7405000d0270ea3dd9

tdf#164417 ooxml export: fix autofilter wrong attribute order

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-12-28 20:20:49 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/ad535c1b53a8ea72ee778e329d910c6495859c76

tdf#164417 ooxml export: fix autofilter wrong attribute order

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.