tdf#164417 ooxml export: fix autofilter wrong attribute order

According to ooxml standard, x:filter attributes are always before
x:dateGroupItem.

Regression from: eea523b686b27b4807ab21b62805ce9fbddf74ef

Change-Id: Ibfcbba8ba88162203ab662312347fb49cc836083
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179440
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179830
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>